- NEW: new command line params for the log dialog to set the filter. (Stefan)
- NEW: new autoclose setting for local operations only. (Stefan)

Version 1.6.2
- BUG: Error message about non-LF commit messages when using messages with
       non-ASCII text. (Stefan)
- BUG: Dragging files/folders from the repository browser or the status
       list control to the explorer could result in a DEP exception. (Stefan)
- BUG: The pathList passed to CheckCommit() only contained the parent folder
       for recursive commits, not all selected items. (Stefan)
- BUG: TortoiseMerge duplicated the last line when saving UCS-2 files. (Stefan)
- BUG: Using a commit message from the history could result in an error
       about "only numbers are allowed" when trying to commit. (Stefan)
- BUG: Stealing a lock failed when using serf instead of neon. (Stefan)
- BUG: Segfault in TSVNCache. (Stefan)

Version 1.6.1
- CHG: The history dialog is now 'attached' to the commit dialog. (Stefan)
- CHG: When filling in a log message from the 'recent' messages in the
       commit dlg, use the bugtraq:logregex to extract the bug ID and fill
       the bug ID field if possible and only use the bugtraq:message value
       if the logregex doesn't return a bug ID. (Stefan)
- CHG: Updated to OpenSSL 0.9.8k (Stefan)
- BUG: Showing properties from the explorer svn properties tab did not work
       if a language other than English was set. (Stefan)
- BUG: Crash in "cleanup". (Stefan)
- BUG: TortoiseBlame showed only empty files. (Stefan)
- BUG: Crash when showing the revision graph where the URL of the repository
       required escaping. (Stefan)
- BUG: The log dialog would show paths incorrectly greyed out or hidden
       for urls which need escaping. (Stefan)
- BUG: Sorting in the status list control didn't work properly for columns
       after 'lock author'. (Stefan)
- BUG: The bugtraq:label text was shown garbled in the commit dialog if it
       contained non-ASCII chars. (Stefan)